Fix #522: Reflect Changes in Callback Management API